src/style.css
img {
  width: 100%;
  height: auto;
}
a {
  text-decoration: none;
  color: black;
}

/* shared */
header h2,
footer .footer-info h2,
footer .footer-info .social_links {
  text-align: center;
}

header h2,
main h2,
footer .footer-info h2 {
  font-size: 2rem;
  font-weight: 200;
}

article .github,
article .dummy-img {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

footer .footer-info .social_links,
header .social_links {
  font-size: 1.5rem;
}

/* styles */
header {
  padding: 2rem;
  position: relative;
  isolation: isolate;

  .hero,
  .bg {
    filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.75));
  }

  .bg {
    position: absolute;
    inset: 0;
    z-index: -1;

    &::before {
      content: "";
      position: absolute;
      background-color: #0891b2;
      clip-path: polygon(0 0, 100% 0%, 100% 35%, 0 65%);
      inset: 0;
    }
  }

  .hero {
    position: relative;
    margin: auto;

    h1 {
      font-size: 2.5rem;
      position: absolute;
      inset: auto auto 0 1rem;
      color: white;
    }
  }
  h2 {
    margin-top: 1.5rem;
  }

  .social_links {
    margin-top: 0.5rem;
    display: flex;
    justify-content: center;
    gap: 0.5rem;
  }
}

main {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(auto, 300px));
  justify-content: center;
  padding: 1rem;
  --meta-font-size: 1.25rem;
  --grid-gap: 2rem;
  gap: var(--grid-gap);

  h2 {
    grid-column: 1 / -1;
    margin-bottom: calc((-1 * var(--grid-gap)) + 0.5rem);
  }

  article {
    padding-bottom: 3rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.3);

    .dummy-img {
      background-color: #7c75ca;
      height: 10rem;
      color: white;
      font-size: 2rem;
      font-family: "Playfair Display", serif;
      text-align: center;
      padding: 1rem;
    }
    .meta {
      display: flex;
      flex-wrap: wrap;
      gap: 0.5rem;

      h3 {
        padding-left: 1rem;
        margin-right: auto;
        font-size: var(--meta-font-size);
      }

      a {
        --icon-size: var(--meta-font-size);

        align-self: center;
        i {
          font-size: var(--icon-size);
        }

        &.open-in-new {
          padding-right: 1rem;
          img {
            height: var(--icon-size);
            width: auto;
            max-width: var(--icon-size);
          }
        }
      }
    }
    p {
      padding: 0 1rem;
    }
  }
}

footer {
  margin-top: 5rem;
  padding-top: 1rem;
  background-color: #0891b2;
  color: white;

  .footer-info {
    padding: 1rem;
    h2 {
      margin-bottom: 1rem;
    }

    address {
      margin-top: 1rem;
      font-style: normal;
    }
    a {
      color: inherit;
    }
    .social_links {
      color: black;
      margin: 1rem 0;
    }
  }
  .footer-img__container {
    display: grid;
    place-content: center;
  }
}

/* media queries */

@media screen and (width < 680px) {
  main {
    grid-template-columns: 1fr;
    padding: 2rem;
    h2 {
      text-align: center;
    }
  }
}
@media screen and (width >= 495px) {
  footer {
    .wrapper {
      max-width: 810px;
      margin: auto;
      display: flex;
      gap: 1rem;
      padding: 1rem;

      > * {
        flex: 1;
      }
      .footer-info {
        display: flex;
        flex-direction: column;
        justify-content: center;

        h2,
        .social_links {
          text-align: left;
        }
      }
    }
  }
}

